<resources>
    <string name="app_name">CP3405-Team-3-A2</string>
    <string name="jcu_logo">JCU Logo</string>
    <string name="app_title">CareerLink</string>
    <string name="email_label_text">Email:</string>
    <string name="password_label_text">Password:</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="trouble_signing_in_text">Trouble Signing In?</string>
    <string name="missingError">Email or Password is missing</string>
    <string name="incorrectError">The email or password is incorrect</string>
    <string name="back_text"><![CDATA[<]]></string>
    <string name="home">Home</string>
    <string name="jobs">Jobs</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="profile_name">Name:</string>
    <string name="title_activity_test_nav">test_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="company">Company:</string>
    <string name="company_description">Company Description:</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="job_position">Job Position:</string>
    <string name="academic_history">Academic History:</string>
    <string name="profile_pic_desc">User profile Picture</string>
    <string name="qualifications">Qualifications:</string>
    <string name="Company_profile_pic_desc">Company Profile Picture</string>
    <string name="external_links_with_colon">External links:</string>
    <string name="job_interests">Job interests:</string>
    <string name="qualifications_with_colon">Qualifications:</string>
    <string name="academic_history_with_colon">Academic History:</string>
    <string name="interested_location">Interested Location:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name_with_colon">Name:</string>
    <string name="linkedin_logo">LinkedIn Logo</string>
    <string name="github_logo">github logo</string>
    <string name="job_interests_with_colon">Job interests:</string>


</resources>
