<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:paddingRight="30dp"
    android:paddingLeft="30dp">

    <ImageView
        android:id="@+id/jcu_logo"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_weight="1"
        android:contentDescription="@string/jcu_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jcu_logo" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/app_title"
        android:layout_weight="1"
        style="@style/title"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label_text"
            style="@style/labels"/>

        <EditText
            android:id="@+id/email_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter your email address here..."
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor,UnusedAttribute" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label_text"
            style="@style/labels"/>

        <EditText
            android:id="@+id/password_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter your email address here..."
            android:inputType="textPassword"
            tools:ignore="LabelFor,UnusedAttribute" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/errorText"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button_text"
            android:layout_gravity="center"
            android:padding="30dp"
            android:onClick="signInOnClick"/>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_button_text"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:onClick="createAccountOnClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:id="@+id/forgot_password_link"
            android:text="@string/trouble_signing_in_text"
            android:layout_gravity="center"
            style="@style/hyperlinks"/>
    </LinearLayout>

</LinearLayout>