<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/myProfileHeading"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>


    </LinearLayout>


        <LinearLayout
            android:id="@+id/profileMainItems"
            android:layout_width="match_parent"
            android:layout_height="618sp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0sp"
                android:focusable="true"
                android:focusableInTouchMode="true">


                <TextView
                    android:id="@+id/nameHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginTop="50sp"
                    android:text="@string/settings"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="264dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/title_notifications"
                    app:layout_constraintBottom_toTopOf="@+id/newJobListButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameHeader">

                </CheckBox>

                <Button
                    android:id="@+id/newJobListButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="136dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="114dp"
                    android:layout_marginBottom="44dp"
                    android:layout_weight="1"
                    android:text="Change Password"
                    app:layout_constraintBottom_toTopOf="@+id/jobInterestsHeader"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <TextView
                    android:id="@+id/jobInterestsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginTop="250dp"
                    android:text="Privacy Settings:"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/academicHistoryHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginTop="290sp"
                    android:text="Profile Visibility:"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="155dp"
                    android:layout_marginBottom="169dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/academicHistoryHeader"
                    app:layout_constraintTop_toBottomOf="@+id/jobInterestsHeader" />

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="162dp"
                    android:layout_marginTop="99dp"
                    android:layout_marginEnd="148dp"
                    android:layout_marginBottom="154dp"
                    android:text="@string/back_text"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/academicHistoryHeader"
                    tools:text="Logout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu"
        style="@style/navBottomBar"/>

</androidx.constraintlayout.widget.ConstraintLayout>